Started working on Getting Started page

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <p>By now you may be thinking that it sounds like there is a lot more stuff to do with a DVCS than with a "traditional" revision control system.  The truth is there is a lot more stuff that you can do and a little more stuff that you have to do.  There is some additional overhead (more commands, more choices) with a DVCS, but that provides a great deal more flexibility.</p>
         <p>Enough overview, let's take a look at how this works.</p>
 
+        <a href="GettingStarted.html">Getting Started</a>
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
