--- a/GettingStarted.html
+++ b/GettingStarted.html
@@ -26,6 +26,30 @@
 
         <h3>Getting Started</h3>
 
+        <h3>Getting to know Git</h3>
+
+        <p>Before we get started we need to introduce ourselves to Git.  This is important because beyond tracking what has changed, Git is also going to track who made the changes.</p>
+
+        <code>Git config</code>
+
+        <p>Git has a configuration where it tracks things like who you (the user) are.  You can modify this configuration using the <code>git config</code> commands.</p>
+
+        <code>git config user.name Me Myself</code>
+        <code>git config user.email me.myself@example.com</code>
+
+        <p>These commands will identify who you are to Git.  They will store this information in the current repository which may be fine.  If you don't want to have to keep entring this information for each repository however you can run the commands with the global flag:</p>
+
+        <code>git config --global user.name Me Myself</code>
+        <code>git config --global user.email me.myself@example.com</code>
+
+        <p>Now Git will remmeber these settings for all repositories where you have not set them.  This is probably how you want to edit the config (globally) in most circumstances.  While we are editing the configuration we should tell Git what editor we want to use with Git.  This command looks like this:</p>
+
+        <code>git config --system core.editor C:\Windows\notepad.exe</code>
+
+        <p>Note in this case we have updated the system configuration which will apply to anyone using Git on this machine.  Git looks fir the first place to find a configuration setting.  It looks first in the repository config, then your user config and finally in the system config file.</p>
+
+        <p>Now that Git know who we are let's add some files.</p>
+
         <code>Git init</code>
 
         <p>To start working with our DVCS, the tool is going to need a place to do it's work.  This is both the scratch pad the tool uses and the location of the version information for the changes we are tracking.  Git creates this space when you run the <code>get init</code> command.  Git will create a folder called <code>.git</code>.  There is nothing in this folder you need to look at.  It is importand that this folder is being backed up somehow as all of the change history that is being tracked is in this folder.</p>
@@ -37,18 +61,40 @@
         <p>Now that our list of files has been staged we can "look" at the list using the <code>git status</code> command.</p>
 
         <code>
-            # On branch master
-            # Changes to be committed:
-            #   (use "git reset HEAD &lt;file&gt;..." to unstage)
-            #
-            #       new file:   GettingStarted.html
-            #
-            # Untracked files:
-            #   (use "git add &lt;file&gt; to include in what will be committed)
-            #
-            #       FixingMistakes.html
-            #       SharingWithOthers.html
+            # On branch master<br />
+            # Changes to be committed:<br />
+            #   (use "git reset HEAD &lt;file&gt;..." to unstage)<br />
+            #<br />
+            #       new file:   GettingStarted.html<br />
+            #       modified:   index.html<br />
+            #<br />
+            # Untracked files:<br />
+            #   (use "git add &lt;file&gt; to include in what will be committed)<br />
+            #<br />
+            #       FixingMistakes.html<br />
+            #       SharingWithOthers.html<br />
         </code>
+
+        <p>Note that git show that the file GettingStarted.html is a new file that has been added to the staging area.  The index.html file is a file that was already in the repository and has been modified.  The files FixingMistakes.html and SharingWithOthers.html are untracked or not in the staging area.</p>
+        <p>Once we have our changes added to the staging area, we commit them to the repository.</p>
+
+        <code>git commit -m "Initial commit"</code>
+
+        <p>This command will add the changes we had staged to the repository with the comment message <i>Initial commit</i>.  The output will look something like this:</p>
+
+        <code>
+            [master ca93a4c] Started working on Getting Started page<br />
+            2 files changed, 70 insertions(+)<br />
+            create mode 100644 GettingStarted.html<br />
+        </code>
+
+        <p>A couple of things to note.  The <code>[master  ca93a4c]</code> tells you that the commit was added to the master branch (more on branches later) and the commit has an ID of ca93a4c.  The ID will become important when we start <a href="SharingWithOthers.html">sharing our code with others</a>.</p>
+
+        <code>Git add [filename]</code>
+
+        <p>Although it is common to wish to add everything that has changed, sometimes we want to be a little more selective.  The command <code>git add GettingStarted.html</code> will add only the file specified.  Another way to be selective is to use the command <code>get add -i</code>.  This command will present a menu that will walk you through adding files and even changes (hunks) within files that you wish to stage.</p>
+
+        <p>Note that you do not have to plan for the files you wish to modify.  You just make changes and Git notices those changes, you stage them and then commit them.  If you are working on your own this is all the workflow that you need.  However most of us work with other people from time to time.  So we are going to look at sharing our changes.  Before we get to that though let's look at options for <a href="FixingMistakes.html">fixing mista<span style="text-decoration: line-through;">t</span>kes</a>.</p>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
