Starting to work on FixingMistakes.html

--- a/FixingMistakes.html
+++ b/FixingMistakes.html
@@ -27,6 +27,9 @@
 
         <h3>Fixing Mistakes</h3>
 
+        <p>Part of the reason for tracking versions is because things do not always go as planned.  Let's assume that are looking over your work (not making any changes yet) and then you notice that Git says there are changes to the file.  So you look at the diff and discover your editor has changed all the tabs to spaces.  This wasn ot a change you intended to make.  You can change the setting in the editor, but how do we get the file back the way it was?</p>
+
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
